# pipCalculator

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yaml  releasePyPI.yaml
Foods/: __init__.py
calcMaier/: __init__.py  _exceptions.py
